# solaire

./: .env.example  .gitignore  README.md  docker-compose.yaml  env.example  main.py  pyproject.toml  run_agent_tests.sh  run_integration_tests.sh  run_server.sh  run_unit_tests.sh
.notebooks/: categories_extraction_agent.ipynb  summary_generation_agent.ipynb  title_generation_agent.ipynb
backend/: pyproject.toml  run_agent_tests.sh  run_integration_tests.sh  run_server.sh  run_unit_tests.sh
backend/.notebooks/: outlining_generation_agent.ipynb  publication_creation_agent.ipynb  simmilar_topics_suggest_agent.ipynb
backend/infra/agents/: publication_content_generator_agent.py  publication_outlining_generator_agent.py  thought_interpreter_agent.py  thought_topic_suggester_agent.py
backend/infra/container/: setup_containers.py
backend/infra/http/: server.py
frontend/: README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/contexts/: gallery-context.tsx  navigation-context.tsx
frontend/src/hooks/: use-auto-scroll.ts  use-gallery.ts  use-navigation.ts  use-related-thoughts.ts  use-thoughts.ts
frontend/src/services/: instance.ts
frontend/src/stores/: thoughts-store.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatting.ts  logging.ts
notebooks/: outlining_generation_agent.ipynb  simmilar_topics_suggest_agent.ipynb  summary_generation_agent.ipynb  title_generation_agent.ipynb
(+200 files in other folders)
